# Agent2Sandbox

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  architecture.md  init.md  latest_demand.md  log.txt  plan.md  pyproject.toml
agent2sandbox/: .env  __init__.py  demo_runner.py  env  llm_proxy.py  settings.py  task_definition.py
agent2sandbox/adapters/: __init__.py  result_converter.py  tool_adapter.py
agent2sandbox/config/: __init__.py  config.py
agent2sandbox/core/: __init__.py  orchestrator.py  state_manager.py  types.py
agent2sandbox/llm/: __init__.py  client.py
agent2sandbox/tools/: __init__.py  definitions.py
config/: llmproxy-cfg.example.yaml  sandbox-server-cfg.example.yaml
src/: llm_proxy.py  sandbox_interactions.py  task_definition.py  utils.py
tasks/: claude_proxy_demo.yaml
test/: spec-claude-proxy-demo.md  test1-sandbox-interaction.py  test2-claude-proxy-demo.py  test2-real-llm-integration.py  test3-agent-tasks.py  test3-llmproxy-standalone.py  test_debug.py  test_framework_basic.py  test_quick_connection.py  test_sandbox_creation.py
